--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@ header{
   font-weight: 500;
   border-radius: 10px;
   margin-top: 5px;
-  padding: 5px 10px;
+  padding: 4px 10px 0 10px;
 }
 .resume_exp a:hover{
   color: #ffffff;
@@ -401,10 +401,10 @@ header{
 }
 @media (max-width: 456px) {
   #experience_down h2{
-    font-size: 23px !important;
+    font-size: 21px !important;
   }
   .resume_exp a{
-    font-size: 12px !important;
+    font-size: 14px !important;
   }
 }
 
